# cppcourse-brunel

./: CMakeLists.txt  Doxyfile  Jupyter_graph0.ipynb  Jupyter_graph1.py  Jupyter_instructions.py  README.md  constants.hpp  data_10000v1.txt  main.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  neuron_unittest.cpp
docs/: doxyfile.in
html/: annotated.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  class_network-members.html  class_network.html  class_neuron-members.html  class_neuron.html  classes.html  constants_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  index.html  md__r_e_a_d_m_e.html  network_8hpp_source.html  neuron_8hpp_source.html  pages.html
html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  search.js  searchdata.js
src/: constants.hpp  neuron.cpp  neuron.hpp  neuron_unittest.cpp
